--- a/cse373.md
+++ b/cse373.md
@@ -2,11 +2,13 @@
 
 ## Table of Contents
 1. [Introduction](#lecture-1)
-    - Integer exponentiation by squaring
     - Big-O notation
+    - Integer exponentiation by squaring
     - Euclid's GCD
     - Least Common Ancestor
 2. [String Search](#lecture-2)
+    - KMP Algorithm
+    - Karp-Rabin Algorithm
 3. [Suffix Tree](#lecture-3)
 4. [Suffix Array](#lecture-4)
     - Suffix array
@@ -14,6 +16,7 @@
     - LCP array
 
 <a id="lecture-1"></a>
+
 ## Lecture 1: Introduction
 
 ### Key definitions
@@ -21,9 +24,29 @@
 - `Problem:` described by the set of possible inputs and the desired output.
 - `Computational Model:` the set of elementary operations used by the algorithm
 
+### Big-O notation
+- Intuition: the big-O notation lets us state the runtime/space of an algorithm, ignoring details that do not matter for large n (constant factors and lower-order terms).
+- $\mathcal{O}$ = upper bound
+    - Formal proof:
+        - Choose $n_0 \in \mathbb{R}$ and $C \in \mathbb{R}$.
+        - If for all $n \geq n_0$, $f(n) \leq C * g(n)$, then $f(n) = \mathcal{O}(g(n))$
+    - $5n = \mathcal{O}(n)$
+    - $5n = \mathcal{O}(n^2)$
+- $\Omega$ = lower bound
+    - Formal proof:
+        - Choose $n_0 \in \mathbb{R}$ and $C \in \mathbb{R}$.
+        - If for all $n \geq n_0$, $f(n) \geq C * g(n)$, then $f(n) = \Omega(g(n))$
+    - $5n^2 = \Omega(n)$
+    - $n! = \Omega(n)$
+- $\Theta$ = tight bound
+    - Formal proof:
+        - Both conditions for $\mathcal{O}(g(n))$ and $\Omega(g(n))$ hold.
+    - $5n = \Theta(n)$
+    - $5n^2 = \Theta(n^2)$
+
 ### Integer exponentiation by squaring
 - Input
-    - integers $a, m > 0$ and n $>= 0$
+    - integers $a, m > 0$ and n $\geq 0$
 - Output
     - the value $a^n \mod m$
 ```py
@@ -37,27 +60,6 @@ def FastPow(a, n, m):
         t = FastPow(a, n/2, m)
         return (t * t) % m
 ```
-
-### Big-O notation
-- Intuition: the big-O notation lets us state the runtime/space of an algorithm, ignoring details that do not matter for large n (constant factors and lower-order terms).
-- $\mathcal{O}$ = upper bound
-    - Formal proof:
-        - Choose $n_0 \in \mathbb{R}$ and $C \in \mathbb{R}$.
-        - If for all $n >= n_0$, $f(n) <= C * g(n)$, then $f(n) = \mathcal{O}(g(n))$
-    - $5n = \mathcal{O}(n)$
-    - $5n = \mathcal{O}(n^2)$
-- $\Omega$ = lower bound
-    - Formal proof:
-        - Choose $n_0 \in \mathbb{R}$ and $C \in \mathbb{R}$.
-        - If for all $n >= n_0$, $f(n) >= C * g(n)$, then $f(n) = \Omega(g(n))$
-    - $5n^2 = \Omega(n)$
-    - $n! = \Omega(n)$
-- $\Theta$ = tight bound
-    - Formal proof:
-        - Both conditions for $\mathcal{O}(g(n))$ and $\Omega(g(n))$ hold.
-    - $5n = \Theta(n)$
-    - $5n^2 = \Theta(n^2)$
-
 
 ### Bubble sort
 - time complexity: $O(n^2)$
@@ -98,7 +100,7 @@ def euclid(a, b):
 ### Least Common Ancestor
 - Part 1
     - Traverse tree and store the entry $a$ and exit $b$ for each node.
-    - $u$ is an ancestor of $v$ only if $a(u) <= a(v) <= b(v) <= b(u)$.
+    - $u$ is an ancestor of $v$ only if $a(u) \leq a(v) \leq b(v) \leq b(u)$.
     - $\mathcal{O}(n)$ time preprocessing
     - $\mathcal{O}(1)$ time query
 - Jumping $k$ nodes up in the tree
@@ -110,8 +112,125 @@ def euclid(a, b):
 
 
 <a id="lecture-2"></a>
+
 ## Lecture 2: String Search
 
+### $\pi$ array
+- integer array, same length as pattern $P$
+- each $\pi[j]$ = length of the longest proper border of the substring $P[1..j]$.
+```
+pattern = ABAABAAAAB
+
+   j    1   2   3   4   5   6   7   8   9   10
+P[j]    A   B   A   A   B   A   A   A   A   B
+π[j]    0   0   1   1   2   3   4   1   1   2
+```
+- Can be constructed in $\mathcal{O}(m)$ time, where $m$ is length of $P$.
+```py
+# arrays are 1-indexed
+
+def ConstructPi(P):
+    pi = int[len(P)] {0}        # init all values to 0
+
+    pi[1] = 0                   # first element is always 0
+    b = 0                       # counter for border length
+
+    for i in range(2, len(P)):  # iterate until end
+        while b > 0 and P[b+1] != P[i]:
+            b = pi[b]
+        if P[b+1] == P[i]:
+            b += 1
+        pi[i] = b
+```
+
+### KMP Algorithm
+- $\mathcal{O}(n+m)$ time
+    - $\mathcal{O}(m)$ to construct $\pi$ table
+    - $\mathcal{O}(n)$ to run KMP algorithm against string $T$.
+- $\mathcal{O}(m)$ extra space
+```py
+# arrays are 1-indexed
+
+def KMP(str T, str P, int[] pi):
+
+    i = 1       # index in T
+    m = 0       # number of characters matched
+
+    while i <= len(T) - len(P) + 1:
+        while m < len(P) and T[i+m] == P[m+1]:
+            m += 1
+
+        if m == len(P):             # match found
+            return i
+
+        if m > 0:                   # partial match
+            i = i + (m - pi[m])
+            m = pi[m]
+        else:                       # no partial match, move index forward
+            i += 1
+```
+
+
+### Karp-Rabin Fingerprints
+- Choose a prime number $q$.
+- Choose a number $r \in [2..q)$ at random.
+- $T$ is a string of numbers.
+- The Karp-Rabin fingerprint of a substring starting at index $i$ with length $l$ is:
+    - $\Phi(i, i+l) = (\sum^l_{k=1} T[i+k] * r^{l-k}) \mod q$
+```
+T = 0102121
+
+i       1   2   3   4   5   6   7
+T[i]    0   1   0   2   1   2   1
+                i           j
+
+Suppose i = 3 and length = 3
+Substring: 212
+
+Suppose q = 13
+Suppose r = 10
+
+Phi(i, i+3) = (2 * 10^2) + (2 * 10^1) + (2 * 10^0) = 212 mod 13 = 4
+```
+- Two identical substrings have the same KR fingerprint.
+- Most times, two different substrings have different KR fingerprints.
+    - False positive is possible if different substrings have the same KR fingerprint.
+- For any $i \leq j \leq k$, if we have any two fingerprints in $\{\Phi(i,j), \Phi(j,k), \Phi(i,k)\}$, then we can compute the third:
+    - $\Phi(i,k) = \Phi(i,j) * r^{k-j} + \Phi(j,k) \mod q$
+    - $\Phi(i,j) = (\Phi(i,k) - \Phi(j,k)) / r^{k-j}  \mod q$
+    - $\Phi(j,k) = \Phi(i,k) - \Phi(i,j) * r^{k-j}  \mod q$
+    - Each can be evaluated in $\mathcal{O}(\log n)$ time using exponentiation by squaring.
+
+```
+T = 778548784372
+   i      j    k
+
+L = Phi(i, j) = 7785487
+R = Phi(j, k) = 84372
+C = Phi(i, k) = 778548784372
+
+Given L and R, compute C:
+C = L * 10^5 + R
+
+Given L and C, compute R:
+R = C - L * 10^5
+```
+
+### Karp-Rabin String Matching
+- With checks, runs in $\mathcal{O}(nm)$ time
+- Without checks, runs in $\mathcal{O}(n+m)$ time
+- Could result in false positives.
+- A sufficiently large $q$ can make the probability of collision smaller.
+```py
+def KR_Search(int[n] T, int[m] P):
+    '''Precompute r^k mod q for all k in[0, m]'''
+    h = phi_P(0, m)                 # O(m) time
+    for i in range(0, n - m):
+        h2 = phi_T(i, i + m)        # O(1) time
+        if h == h2:
+            '''optional checking'''
+            return i + 1
+```
 
 <a id="lecture-3"></a>
 ## Lecture 3: Suffix Tree
