--- a/cse373.md
+++ b/cse373.md
@@ -115,7 +115,7 @@ def euclid(a, b):
 
 ## Lecture 2: String Search
 
-### $\pi$ array
+### π array
 - integer array, same length as pattern $P$
 - each $\pi[j]$ = length of the longest proper border of the substring $P[1..j]$.
 ```
