--- a/cse373.md
+++ b/cse373.md
@@ -290,9 +290,9 @@ i       SA[i]       T[SA[i]..n]
     - $\mathcal{O}(m)$ space
 
 ### LCP Array
-- $LCP(X, Y) = $ length of longest common prefix of $X$ and $Y$.
+- $LCP(X, Y)$ = length of longest common prefix of $X$ and $Y$.
 - $LCP[1] = 0$
-- $LCP[i] = $ LCP of string at $SA[i]$ and $SA[i-1]$
+- $LCP[i]$ = LCP of string at $SA[i]$ and $SA[i-1]$
 ```
 T = banana
 
@@ -307,7 +307,7 @@ i       SA[i]       LCP[i]      T[SA[i]..n]
 ```
 
 ### Number of Distinct Substrings
-- $|Substr(T)| = \frac{n(n+1)}{2} - $ all values in LCP array, where $n = $ number of characters in $T$
+- $|Substr(T)| = \frac{n(n+1)}{2}$ − all values in LCP array, where $n$ = number of characters in $T$
 ```
 T = banana
 
