--- a/cse373.md
+++ b/cse373.md
@@ -176,7 +176,7 @@ def KMP(str T, str P, int[] pi):
 - Choose a number $r \in [2..q)$ at random.
 - $T$ is a string of numbers.
 - The Karp-Rabin fingerprint of a substring starting at index $i$ with length $l$ is:
-    - $\Phi(i, i+l) = (\sum_{k=1}^{l} T[i+k] * r^{l-k}) \mod q$
+    - $\Phi(i, i+l) = (Σ_{k=1}^{l} T[i+k] * r^{l-k}) \mod q$
 ```
 T = 0102121
 
