--- a/cse373.md
+++ b/cse373.md
@@ -244,7 +244,7 @@ def KR_Search(int[n] T, int[m] P):
 - For any pattern $P$, checking if $P$ is a prefix of some suffix of $T$ can be done in $\mathcal{O}(m)$ time.
 - Checking if $P$ occurs in $T$ can be done in $\mathcal{O}(m)$ time.
 
-![Suffix Trie](img/suffix_trie.png)
+![Suffix Trie](../img/suffix_trie.png)
 
 ### Suffix Tree
 - Compact suffix trie of $T$.
@@ -253,7 +253,7 @@ def KR_Search(int[n] T, int[m] P):
 - Total space: $\mathcal{O}(n)$
 - Can be computed in $\mathcal{O}(n)$ time.
 
-![Suffix Tree](img/suffix_tree.png)
+![Suffix Tree](../img/suffix_tree.png)
 
 ### Suffix Tree Algorithms
 - $Occ(T, P) \neq 0$
@@ -285,7 +285,7 @@ def KR_Search(int[n] T, int[m] P):
 - Size of $S$: $\mathcal{O}(n_1 + n_2)$
 - Construction: $\mathcal{O}(n_1 + n_2)$ time
 
-![Generalized Suffix Tree](img/generalized_suffix_tree.png)
+![Generalized Suffix Tree](../img/generalized_suffix_tree.png)
 
 <a id="lecture-4"></a>
 
